compiler/testData/cli/js/languageVersion.out
compiler/testData/cli/js/languageVersion.kt:5:17: error: this type is sealed, so it can be inherited by only its own nested classes or objects
class Derived : Base()
                ^
COMPILATION_ERROR
