compiler/testData/cli/js/languageVersion.kt
package test

sealed class Base

class Derived : Base()
